Fixed hr overflow and got rid of background colors

--- a/app/css/min768.css
+++ b/app/css/min768.css
@@ -13,7 +13,7 @@
 		border-right-width: 0px;
 	}
 
-	.topRow {
+/*	.topRow {
 		background-color: red;
 	}
 
@@ -27,5 +27,5 @@
 
 	.container-fluid {
 		background-color: yellow;
-	}
+	}*/
 }
